# Search_and_Rescue_Drone_using_Reinforcement_Learning

./: LICENSE  README.md
drone_control/: package.xml  setup.py
drone_control/drone_control/: drone_control.py  spawn_drone.py
drone_rl/: package.xml  setup.cfg  setup.py
drone_rl/drone_rl/: drone_env.py  drone_rl.py
drone_rl/launch/: drone_rl_start.launch.py  start_training.launch.py
drone_rl/logs/PPO_test_0/: events.out.tfevents.1714779207.karan-ubuntu.30836.0  events.out.tfevents.1714779354.karan-ubuntu.31726.0  events.out.tfevents.1714779381.karan-ubuntu.32345.0  events.out.tfevents.1714779420.karan-ubuntu.32734.0  events.out.tfevents.1714779539.karan-ubuntu.33551.0  events.out.tfevents.1714780515.karan-ubuntu.36306.0  events.out.tfevents.1714780632.karan-ubuntu.37340.0  events.out.tfevents.1714782041.karan-ubuntu.39307.0  events.out.tfevents.1714782099.karan-ubuntu.39554.0
drone_rl/worlds/: house.world
sjtu_drone_bringup/rviz/: rviz.rviz
sjtu_drone_control/sjtu_drone_control/drone_utils/: drone_object.py
sjtu_drone_description/: CMakeLists.txt
sjtu_drone_description/include/sjtu_drone_description/: plugin_drone_private.h
sjtu_drone_description/launch/: gazebo.launch.py
sjtu_drone_description/models/sjtu_drone/: model.sdf
sjtu_drone_description/urdf/: sjtu_drone.urdf  sjtu_drone.urdf.xacro
sjtu_drone_description/worlds/: house.world
