<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drone_rl</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="karan.kapoor@uwaterloo.ca">karankapoor</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>gazebo_msgs</depend>
  <depend>std_srvs</depend>
  <depend>functools</depend>
  <depend>gymnasium</depend>
  <depend>numpy</depend>
  <depend>stable_baselines3</depend>
  <depend>math</depend>
  <depend>optuna</depend>
  <depend>launch</depend>
  <depend>tensorboard</depend>
  <depend>drone_control</depend>
  <depend>sjtu_drone_description</depend>
  <depend>sjtu_drone_bringup</depend>
  <depend>os</depend>
  <depend>sys</depend>
  <depend>glob</depend>
  <depend>setuptools</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
